--- a/style.css
+++ b/style.css
@@ -948,8 +948,8 @@ h1.number-title-practica::after{
   /* border-left:  0px solid   rgb(218, 237, 245); */
   margin: auto;
   margin-bottom: 0px;
-  margin-top: 50px;
-  font-size: 20px;
+  margin-top: 10px;
+  font-size: 85%;
   /* width: 85%; */
   /* box-shadow: 1px 1px 5px 1px  rgb(31, 147, 201); */
 }
