--- a/style.css
+++ b/style.css
@@ -1107,73 +1107,43 @@ img {
   transform: scale(1.1);
 }
 
-
-.respButton{
+.respButton {
   display: block;
   font-family: "Bitter", serif;
-  border-radius: 60px; 
-  border: 2.5px solid  rgba(52, 173, 249, 0.718) ;
-  /* background-color: rgb(255, 255, 255); */
+  border-radius: 60px;
+  border: 2.5px solid rgba(52, 173, 249, 0.718);
   background: rgb(252, 252, 244);
-  /* margin-right: auto; */
-  margin-left: 0%;
-  /* margin-top: 3%; */
-  margin-top: 0%;
+  margin: 0 auto;
   font-size: 90%;
   padding: 1%;
   font-weight: 600;
-  /* margin-bottom: 0px; */
-  /* display: flex;*/
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 
+  /* Transiciones suaves */
+  transition: 
+    background-color 0.6s ease-in-out,
+    transform 0.4s ease-in-out,
+    box-shadow 0.4s ease-in-out;
 }
 
-
-
-
-.respButton:hover,.respButton:focus, .respButton:active{
-transition: background-color 0.75s ease;
-transition: font-size 5s ease;
-background-color: rgb(238, 250, 255);
-/* font-size: 185%; */
-/* font-weight: 550; */
-/* color: rgb(25,25,112); */
-/* width: 50%; */
-
-border-radius: 60px; 
--webkit-border-radius: 50px;
--moz-border-radius: 10px;
--ms-border-radius: 10px;
--o-border-radius: 10px;
-transition-duration: 10s;
--webkit-transition-duration: 0s;
-  /* transform: perspective(1px) translateZ(0); */
--webkit-transform: scale(1.1);
-transform: scale(1.1);
-font-weight: 600;
+.respButton:hover,
+.respButton:focus,
+.respButton:active {
+  background-color: rgb(238, 250, 255);
+  transform: scale(1.05); /* menos brusco que 1.1 */
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15); /* efecto de elevación suave */
 }
-
-.respButton:hover::after{
--webkit-transform: scale(1.1);
-transform: scale(1.1);
-font-weight: 600;
-}
-
 
 .hvr-grow {
   vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(1, 90, 255, 0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
+  transition: transform 0.4s ease-in-out;
 }
-.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+  transform: scale(1.05);
 }
 
 
