--- a/style.css
+++ b/style.css
@@ -1132,6 +1132,19 @@ img {
     max-width: 100%;
 }
 
+
+
+.sheet{
+  border: 5px solid rgba(52, 173, 249, 0.718);
+border-radius: 25px;
+padding: 10px;
+margin: 10px auto;
+max-width: 100%;
+height:"2500px";
+box-sizing: border-box;
+}
+
+
 .imagen-box{
     border-radius: 25px;
     padding: 20px;
