--- a/style.css
+++ b/style.css
@@ -792,22 +792,33 @@ h1.number-title-practica::after{
     font-size: 25px;
     width: 90%;
     box-shadow: 0px 0px 10px 0px  rgb(218,165,32);
-    align-items: center;
+    align-items: left;
     justify-content: space-evenly;
     align-content: flex-start;
     
 }
 
 .links-box a{ 
-  padding: 10px;
+  /* padding: 10px; */
+  display: block; 
   font-weight: 500;
+  padding: 10px 0;           /* Espaciado vertical para cada enlace */
+  padding-left: 22%; 
   /*color:  rgba(14, 137, 253, 0.801);*/
+  text-decoration: none;     /* Elimina el subrayado por defecto */
   color:  rgb(255, 0, 0); 
 
 }
 
+.links-box a:hover {
+  text-decoration: underline;
+  color: darkred;
+}
+
 .links-box a:visited{
   color:  rgb(0, 0, 139); 
+  text-decoration: none;  /* (opcional) Elimina subrayado si lo deseas */
+
   /* color:  rgba(14, 137, 253, 0.801); */
 }
 
